[package]
name = "url2md"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.4"                    # A simple to use, efficient, and full-featured Command Line Argument Parser
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }